--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,26 @@
-
 spring.application.name=product-catalog
 
-# MySQL configuration
+# ===============================
+# Database Configuration
+# ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# ===============================
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
+# ===============================
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================
+# Data Initialization
+# ===============================
+# Ensures data.sql runs *after* Hibernate creates tables
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+# Optional: Logs SQL values (useful for debugging)
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
